removed margin_top from 'cashier_widget_content to fix spacing issue and started working on Payout component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -305,6 +305,7 @@ a {
   color: grey;
   height: 430px;
   overflow: auto;
+
  }
 
  .deposit_widget_content {
@@ -312,7 +313,6 @@ a {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top:12px;
   
  }
 
@@ -524,9 +524,7 @@ a {
   background: rgb(255, 113, 113);
  }
 
- .cashier_popup {
-  font-family: 'Arial'
- }
+ 
 
  .cashier_widget_title {
   width: 100%;
@@ -538,4 +536,49 @@ a {
 
  .cashier_account {
   color: black;
+ }
+
+ .cashier_popup_component {
+  
+ }
+
+ .payout_content {
+  height: 270px;
+  background: rgb(255, 233, 233);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+ }
+
+ .payout_middle {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+ }
+
+
+ .payout_bottom {
+  width: 100%;
+  height: 100px;
+  background: rgb(235, 190, 44);
+ }
+
+ .payout_middle span {
+  width: 100px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+ }
+
+ .payout_middle_content {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
  }
